| Bug #17414 | schema distribution functionality does not work on mysq servers without binlog | ||
|---|---|---|---|
| Submitted: | 15 Feb 2006 9:55 | Modified: | 16 Feb 2006 14:21 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.1.7 src | OS: | |
| Assigned to: | Tomas Ulin | Target Version: | |
[15 Feb 2006 9:55]
Tomas Ulin
[15 Feb 2006 23:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/2692
[16 Feb 2006 6:51]
Tomas Ulin
pushed into 5.1.7
[16 Feb 2006 14:21]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 5.1.7 changelog. Closed.
