Bug #17414 ndb schema distribution functionality does not work on mysql servers without binlog